# ops-sysd

./: .gitignore  .gitreview  AUTHORS  CMakeLists.txt  DESIGN.md  README.md  image.manifest  sysd.c  sysd.h  sysd.h.in  sysd_cfg_yaml.c  sysd_cfg_yaml.h.in  sysd_fru.c  sysd_fru.h  sysd_ovsdb_if.c  sysd_ovsdb_if.h  sysd_stub_x86_fru.c  sysd_stub_x86_fru.h  sysd_util.c  sysd_util.h.in
files/: image.manifest
include/: sysd.h.in  sysd_cfg_yaml.h.in  sysd_fru.h  sysd_ovsdb_if.h  sysd_stub_x86_fru.h  sysd_util.h.in  system_vty.h  vtysh_ovsdb_system_context.h
ops-tests/: testsuite_gate@component.conf  testsuite_gate@feature.conf
ops-tests/component/ops-sysd/: test_sysd_ct_show_version_detail.py  test_vtysh_ct_system.py
ops-tests/component/ops-sysd/test_sysd_ct_hw_desc_files/: test_sysd_ct_hw_desc_files.py
ops-tests/component/ops-sysd/test_sysd_ct_hw_desc_files/hwdesc/: devices.yaml  manifest.yaml
ops-tests/component/ops-sysd/test_sysd_ct_image_manifest_file/: test_sysd_ct_image_manifest_file.py
ops-tests/component/ops-sysd/test_sysd_ct_image_manifest_file/test_manifest_files/: image.manifest
ops-tests/component/ops-sysd/test_sysd_ct_os_release/: test_sysd_ct_os_release.py
ops-tests/component/ops-sysd/test_sysd_ct_os_release/files/os_releases/: os-release.debian-8.0  os-release.default
ops-tests/feature/: test_vtysh_ft_show_version_detail.py
ops-tests/feature/bootup/: platform_err_msgs.py  test_ft_bootup.py
opsplugins/: system.py
src/: acl_init.c  acl_init.h  qos_init.c  qos_init.h  sysd.c  sysd_cfg_yaml.c  sysd_fru.c  sysd_ovsdb_if.c  sysd_qos_utils.h  sysd_stub_x86_fru.c  sysd_util.c
src/cli/: CMakeLists.txt  system_vty.c  vtysh_ovsdb_system_context.c
tests/: ops-sysd_test.md  test_sysd_ct_hw_desc_files.py  test_sysd_ct_image_manifest_file.py  test_sysd_ct_os_release.py  test_sysd_ct_show_version_detail.py  test_sysd_ct_startup.py  test_vtysh_ct_system.py
tests/files/os_releases/: os-release.79-char-build-id-line  os-release.80-char-build-id-line  os-release.long-name-and-build-id  os-release.no-build-id  os-release.ops-1.0.0
tests/test_hw_desc_files/: acl.yaml  manifest.yaml  ports.yaml
tests/test_manifest_files/: image.manifest  image.manifest1  image.manifest2  image.manifest3
